calc button added to trash container

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,56 +1,60 @@
 body {
-margin: 0;
-padding: 0;
-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-background: linear-gradient(#575a57, #232425);
-height: auto;
-min-height: 100vh;
-display: flex;
-justify-content: center;
-align-items: center;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  background: linear-gradient(#575a57, #232425);
+  height: auto;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .ToDo, .Trash {
-text-align: center;
-border: 1px solid white;
-width: 80vw;
-height: auto;
-box-shadow: 2px 3px 15px rgba(0, 0, 0, 0.5);
-background: #f6f6f6;
-padding-bottom: 60px;
-margin: 40px auto;
+  text-align: center;
+  border: 1px solid white;
+  width: 80vw;
+  height: auto;
+  box-shadow: 2px 3px 15px rgba(0, 0, 0, 0.5);
+  background: #f6f6f6;
+  padding-bottom: 60px;
+  margin: 40px auto;
 }
+.NumberButton {
+  width: 92%;
+  height: 32px;
 
+}
 .ToDo-Header {
-color: black;
-font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
-font-weight: 400;
-text-transform: uppercase;
-margin: 70px auto 30px;
+  color: black;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  text-transform: uppercase;
+  margin: 70px auto 30px;
 }
 
 .ToDo-Add {
-width: 20px;
-padding: 5px;
-height: 20px;
-cursor: pointer;
-background: #329bce;
-border-radius: 10px;
-box-shadow: 1px 1px 1px #c70202;
-color: white;
-font-size: 18px;
-margin-right: 5px;
+  width: 20px;
+  padding: 5px;
+  height: 20px;
+  cursor: pointer;
+  background: #329bce;
+  border-radius: 10px;
+  box-shadow: 1px 1px 1px #c70202;
+  color: white;
+  font-size: 18px;
+  margin-right: 5px;
 }
 
 .ToDo-Add:hover {
-box-shadow: none;
-margin-top: 21px;
-margin-left: calc(auto + 1px);
+  box-shadow: none;
+  margin-top: 21px;
+  margin-left: calc(auto + 1px);
 }
 
 .ToDo-Container {
-width: 80%;
-margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 .ToDoItem-Add {
   width: 20px;
@@ -71,13 +75,13 @@ margin: 0 auto;
 }
 
 input {
-text-align: center;
-width: 91%;
-padding: 8px;
-padding-left: 4px;
-font-size: 1em;
-margin: 10px auto;
-box-shadow: 1px 3px 20px 0px rgba(0, 0, 0, 0.3)
+  text-align: center;
+  width: 91%;
+  padding: 8px;
+  padding-left: 4px;
+  font-size: 1em;
+  margin: 10px auto;
+  box-shadow: 1px 3px 20px 0px rgba(0, 0, 0, 0.3)
 }
 
 .ToDoItem {
